--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Thẻ meta này ép buộc trình duyệt chỉ render giao diện sáng -->
+    <meta name="color-scheme" content="light"> 
     <title>Floral House - Coffee & Tea</title>
     
     <!-- Import Font chữ (Google Fonts) -->
@@ -22,8 +24,9 @@
             --text-gray: #555555;
             --accent-gold: #D4AF37;
             --error-red: #e74c3c;
-            --paper-bg: #fdfbf7; /* Màu nền giấy cho tâm thư */
-            color-scheme: light;
+            --paper-bg: #fdfbf7;
+            /* Ép buộc CSS hiểu đây là giao diện sáng */
+            color-scheme: light; 
         }
 
         /* --- 2. CẤU TRÚC CHUNG --- */
@@ -37,6 +40,9 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            /* Đảm bảo nền luôn trắng bất kể chế độ hệ thống */
+            background-color: #ffffff !important; 
+            color: #555555 !important;
             overflow-x: hidden; 
         }
 
@@ -160,72 +166,35 @@
             url('https://images.unsplash.com/photo-1533227268428-f9ed0900fb3b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
         }
 
-        /* --- 5. HERO SECTION STYLES (CẬP NHẬT HIỆU ỨNG MƯỢT) --- */
+        /* --- 5. HERO SECTION --- */
         .hero {
-            height: 100vh; 
-            width: 100%;
-            position: relative;
-            display: flex; 
-            align-items: center; 
-            justify-content: center;
-            text-align: center; 
-            color: var(--white);
-            overflow: hidden;
+            height: 100vh; width: 100%; position: relative;
+            display: flex; align-items: center; justify-content: center;
+            text-align: center; color: var(--white); overflow: hidden;
         }
-
         .hero::before {
-            content: '';
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%;
+            content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
             background: linear-gradient(rgba(46, 90, 72, 0.4), rgba(46, 90, 72, 0.4));
-            z-index: 1; 
-            pointer-events: none;
+            z-index: 1; pointer-events: none;
         }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-        }
-
-        #hero-slideshow {
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%;
-            z-index: 0;
-        }
-
+        .hero-content { position: relative; z-index: 2; }
+        #hero-slideshow { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; }
         .hero-slide {
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background-size: cover;
-            background-position: center;
-            opacity: 0; 
+            position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            background-size: cover; background-position: center; opacity: 0; 
             transition: opacity 2.5s ease-in-out;
         }
-
-        .hero-slide.active {
-            opacity: 1;
-        }
-
-        /* --- MŨI TÊN ĐỘNG CHỈ XUỐNG --- */
+        .hero-slide.active { opacity: 1; }
         .scroll-down {
-            position: absolute;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%);
-            color: var(--white);
-            font-size: 2rem;
-            animation: bounce 2s infinite;
-            cursor: pointer;
-            z-index: 10;
-            text-shadow: 0 2px 5px rgba(0,0,0,0.3);
+            position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%);
+            color: var(--white); font-size: 2rem; animation: bounce 2s infinite;
+            cursor: pointer; z-index: 10; text-shadow: 0 2px 5px rgba(0,0,0,0.3);
         }
-
         @keyframes bounce {
             0%, 20%, 50%, 80%, 100% {transform: translateX(-50%) translateY(0);}
             40% {transform: translateX(-50%) translateY(-10px);}
             60% {transform: translateX(-50%) translateY(-5px);}
         }
-
         .hero-content h1 { font-family: 'Dancing Script', cursive; font-size: 4rem; margin-bottom: 20px; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); }
         .hero-content p { font-size: 1.5rem; margin-bottom: 30px; font-weight: 300; }
         
@@ -237,50 +206,17 @@
         .btn-main:hover { background-color: transparent; color: var(--white); border-color: var(--white); }
 
         /* --- 5.1. TÂM THƯ SECTION --- */
-        .letter-section {
-            background-color: var(--paper-bg);
-            padding: 80px 20px;
-            text-align: center;
-            position: relative;
-        }
+        .letter-section { background-color: var(--paper-bg); padding: 80px 20px; text-align: center; position: relative; }
         .letter-container {
-            max-width: 800px;
-            margin: 0 auto;
-            border: 1px solid rgba(46, 90, 72, 0.2);
-            padding: 40px;
-            position: relative;
-            background-color: #fff;
+            max-width: 800px; margin: 0 auto; border: 1px solid rgba(46, 90, 72, 0.2);
+            padding: 40px; position: relative; background-color: #fff;
             box-shadow: 0 5px 25px rgba(0,0,0,0.05);
         }
-        .letter-icon {
-            font-size: 2rem;
-            color: var(--primary-mint);
-            margin-bottom: 20px;
-        }
-        .letter-title {
-            font-family: 'Dancing Script', cursive;
-            font-size: 2.5rem;
-            color: var(--dark-green);
-            margin-bottom: 30px;
-        }
-        .letter-content {
-            font-size: 1.1rem;
-            color: #666;
-            line-height: 1.8;
-            margin-bottom: 30px;
-            font-style: italic;
-            text-align: justify;
-        }
-        .letter-content p {
-            margin-bottom: 15px;
-        }
-        .letter-signature {
-            font-family: 'Dancing Script', cursive;
-            font-size: 1.5rem;
-            color: var(--accent-gold);
-            text-align: right;
-            margin-top: 20px;
-        }
+        .letter-icon { font-size: 2rem; color: var(--primary-mint); margin-bottom: 20px; }
+        .letter-title { font-family: 'Dancing Script', cursive; font-size: 2.5rem; color: var(--dark-green); margin-bottom: 30px; }
+        .letter-content { font-size: 1.1rem; color: #666; line-height: 1.8; margin-bottom: 30px; font-style: italic; text-align: justify; }
+        .letter-content p { margin-bottom: 15px; }
+        .letter-signature { font-family: 'Dancing Script', cursive; font-size: 1.5rem; color: var(--accent-gold); text-align: right; margin-top: 20px; }
 
         /* --- 6. COMMON STYLES --- */
         .section-title { text-align: center; margin-bottom: 50px; }
@@ -339,7 +275,11 @@
             box-shadow: 0 5px 20px rgba(0,0,0,0.05); max-width: 800px; margin: 0 auto;
         }
         .form-group { margin-bottom: 20px; position: relative; }
-        input, textarea, select { width: 100%; padding: 15px; border: 1px solid #ddd; border-radius: 5px; font-family: inherit; font-size: 1rem; transition: border-color 0.3s; }
+        input, textarea, select { 
+            width: 100%; padding: 15px; border: 1px solid #ddd; border-radius: 5px; font-family: inherit; font-size: 1rem; transition: border-color 0.3s;
+            /* Force light background for inputs */
+            background-color: #ffffff !important; color: #333 !important;
+        }
         input:focus, textarea:focus, select:focus { outline: none; border-color: var(--primary-mint); }
         input.invalid, textarea.invalid { border-color: var(--error-red); }
         .char-count { display: block; text-align: right; font-size: 0.8rem; color: #888; margin-top: 5px; }
