--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
             }
         }
 
-        // HERO BACKGROUND SLIDESHOW
+        // HERO BACKGROUND SLIDESHOW (CROSS-FADE LOGIC)
         const heroImages = [
             'https://images.unsplash.com/photo-1509042239860-f550ce710b93?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80',
             'https://images.unsplash.com/photo-1497935586351-b67a49e012bf?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80',
@@ -1154,6 +1154,21 @@
         const navMenu = document.querySelector(".nav-menu");
         hamburger.addEventListener("click", () => { hamburger.classList.toggle("active"); navMenu.classList.toggle("active"); });
         
+        // Đóng menu khi click hoặc chạm ra ngoài (trên mobile)
+        document.addEventListener('click', (e) => {
+            if (navMenu.classList.contains('active') && !navMenu.contains(e.target) && !hamburger.contains(e.target)) {
+                hamburger.classList.remove("active");
+                navMenu.classList.remove("active");
+            }
+        });
+
+        document.addEventListener('touchstart', (e) => {
+             if (navMenu.classList.contains('active') && !navMenu.contains(e.target) && !hamburger.contains(e.target)) {
+                hamburger.classList.remove("active");
+                navMenu.classList.remove("active");
+            }
+        }, {passive: true});
+
         // DROPDOWN MOBILE
         const dropdown = document.querySelector('.dropdown');
         if(dropdown) { 
