--- a/index.html
+++ b/index.html
@@ -678,7 +678,8 @@
             <div class="section-title"><h2>Sự Kiện & Hoạt Động</h2><p>Kết nối cộng đồng yêu coffee và nghệ thuật</p></div>
             <!-- Event 1 -->
             <div class="event-card">
-                <div class="event-img" style="background-image: url('https://placehold.co/800x400/e0f2f1/2E5A48?text=Event:+Mid+Autumn');"></div>
+                <!-- Updated Mid Autumn Image -->
+                <div class="event-img" style="background-image: url('https://i.postimg.cc/XJ2w4CBz/mid.jpg');"></div>
                 <div class="event-content">
                     <div class="event-date-badge"><i class="far fa-calendar-alt"></i> Thứ 7, 04/10/2025</div>
                     <h3><i class="fas fa-moon"></i> MID AUTUMN FESTIVAL <i class="fas fa-star"></i></h3>
@@ -688,7 +689,8 @@
             </div>
             <!-- Event 2 -->
             <div class="event-card">
-                <div class="event-img" style="background-image: url('https://placehold.co/800x400/e0f2f1/2E5A48?text=Event:+Show+Nhac');"></div>
+                <!-- Updated Music Show Image -->
+                <div class="event-img" style="background-image: url('https://i.postimg.cc/BnxHty1j/music.jpg');"></div>
                 <div class="event-content">
                     <div class="event-date-badge"><i class="far fa-calendar-alt"></i> Thứ 3, 19/8/2025</div>
                     <h3><i class="fas fa-music"></i> SHOW NHẠC TẠI FLORAL HOUSE</h3>
