--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <!-- Favicon -->
     <link rel="icon" href="https://i.postimg.cc/L85xrmqv/488911455-1224001189733670-18342580669773743-n.jpg" type="image/jpg">
-<script src="scipt.js"></script>
+
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -296,6 +296,6 @@
         <div class="copyright">&copy; 2025 Floral House. Developed by <strong>Thái Hoàng Bảo</strong>.</div>
     </footer>
 
-  
+<script src="script.js"></script>  
 </body>
 </html>
